--- a/templates/login/auth-signin-cover.html.twig
+++ b/templates/login/auth-signin-cover.html.twig
@@ -14,6 +14,10 @@
                             <div class="row g-0">
                                 <div class="col-lg-12">
                                     <div class="p-lg-5 p-4">
+                                     <div class="logo-lg d-flex justify-content-center align-items-center p-4">
+                            <img src="{{ asset('images/logo-final.png') }}" alt="" height="40">
+                            
+                        </div>
                                         <div>
                                             <h5 class="text-primary">Bienvenido</h5>
                                             <p class="text-muted">Acceder para continuar trabajando</p>
