--- a/templates/partials/topbar.html.twig
+++ b/templates/partials/topbar.html.twig
@@ -35,7 +35,7 @@
                 <!-- App Search-->
                 <form class="app-search d-none d-md-block">
                     <div class="position-relative">
-                        <input type="text" class="form-control" placeholder="Filtrar..." autocomplete="off"
+                        <input type="text" class="form-control" placeholder="Buscar..." autocomplete="off"
                                id="search-options" value="">
                         <span class="mdi mdi-magnify search-widget-icon"></span>
                         <span class="mdi mdi-close-circle search-widget-icon search-widget-icon-close d-none"
@@ -45,30 +45,34 @@
                         <div data-simplebar style="max-height: 320px;">
                             <!-- item-->
                             <div class="dropdown-header">
-                                <h6 class="text-overflow text-muted mb-0 text-uppercase">Recent Searches</h6>
+                                <h6 class="text-overflow text-muted mb-0 text-uppercase">Páginas</h6>
                             </div>
-
+<!--
                             <div class="dropdown-item bg-transparent text-wrap">
                                 <a href="#" class="btn btn-soft-secondary btn-sm btn-rounded">how to setup <i
                                             class="mdi mdi-magnify ms-1"></i></a>
                                 <a href="#" class="btn btn-soft-secondary btn-sm btn-rounded">buttons <i
                                             class="mdi mdi-magnify ms-1"></i></a>
-                            </div>
-                            <!-- item-->
+                            </div> -->
+                            <!-- item
                             <div class="dropdown-header mt-2">
                                 <h6 class="text-overflow text-muted mb-1 text-uppercase">Pages</h6>
-                            </div>
+                            </div>-->
 
                             <!-- item-->
                             <a href="javascript:void(0);" class="dropdown-item notify-item">
                                 <i class="ri-bubble-chart-line align-middle fs-18 text-muted me-2"></i>
-                                <span>Analytics Dashboard</span>
+                                <span>Despachos cerrados</span>
+                            </a>
+                            <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <i class="ri-bubble-chart-line align-middle fs-18 text-muted me-2"></i>
+                                <span>Despachos en tránsito</span>
                             </a>
 
                             <!-- item-->
                             <a href="javascript:void(0);" class="dropdown-item notify-item">
                                 <i class="ri-lifebuoy-line align-middle fs-18 text-muted me-2"></i>
-                                <span>Help Center</span>
+                                <span>Centro de ayuda</span>
                             </a>
 
                             <!-- item-->
@@ -79,7 +83,7 @@
 
                             <!-- item-->
                             <div class="dropdown-header mt-2">
-                                <h6 class="text-overflow text-muted mb-2 text-uppercase">Members</h6>
+                                <h6 class="text-overflow text-muted mb-2 text-uppercase">Empleados</h6>
                             </div>
 
                             <div class="notification-list">
@@ -121,11 +125,11 @@
                                 </a>
                             </div>
                         </div>
-
+<!-- se oculta boton de ver todos los resultados
                         <div class="text-center pt-3 pb-1">
                             <a href="#" class="btn btn-primary btn-sm">View All Results <i
                                         class="ri-arrow-right-line ms-1"></i></a>
-                        </div>
+                        </div> -->
                     </div>
                 </form>
             </div>
@@ -184,10 +188,10 @@
                         <h6 class="dropdown-header">{{ app.user.userIdentifier }}</h6>
                         <a class="dropdown-item" href="#"><i
                                     class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
-                                    class="align-middle">Editar perfil</span></a>
-                        <a class="dropdown-item" href="{{ path('app_reminder_index') }}"><i
+                                    class="align-middle">Mi Cuenta</span></a>
+                  <!--      <a class="dropdown-item" href="{{ path('app_reminder_index') }}"><i
                                     class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i> <span
-                                    class="align-middle">Panel de tareas</span></a>
+                                    class="align-middle">Panel de tareas</span></a> -->
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{{ path('app_logout') }}"><i
                                     class="mdi mdi-logout text-muted fs-16 align-middle me-1"></i> <span
