Se modifica nombre del menu del  sidebar

--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -44,7 +44,7 @@
                     <li class="nav-item">
                         <a class="nav-link menu-link {{ active is defined and active == 'role' ? 'active' }}" href="{{ path('app_role_index') }}" role="button"
                            aria-expanded="false" aria-controls="sidebarLanding">
-                            <i class="ri-lock-unlock-line"></i> <span>Roles</span>
+                            <i class="ri-inbox-archive-line"></i> <span>Despachos</span>
                         </a>
                     </li>
 
@@ -52,7 +52,7 @@
                         <a class="nav-link menu-link {{ active is defined and active == 'team' ? 'active' }}" href="{{ path('app_team_index') }}" role="button"
                            aria-expanded="false"
                            aria-controls="sidebarLanding">
-                            <i class="ri-group-2-line"></i> <span>Equipos</span>
+                            <i class="ri-mail-send-line"></i> <span>Envíos</span>
                         </a>
                     </li>
 
@@ -60,7 +60,7 @@
                         <a class="nav-link menu-link {{ active is defined and  active == 'user' ? 'active' }}" href="{{ path('app_user_index') }}" role="button"
                            aria-expanded="false"
                            aria-controls="sidebarLanding">
-                            <i class="ri-user-3-line"></i> <span>Usuarios</span>
+                            <i class="ri-community-line"></i> <span>Oficinas</span>
                         </a>
                     </li>
 
@@ -70,7 +70,7 @@
                     <a class="nav-link menu-link {{ active is defined and active == 'customer' ? 'active' }}" href="{{ path('app_customer_index') }}" role="button"
                        aria-expanded="false"
                        aria-controls="sidebarLanding">
-                        <i class=" ri-user-follow-line"></i> <span>Clientes</span>
+                        <i class="ri-truck-line"></i> <span>Transportes</span>
                     </a>
                 </li>
 
@@ -78,7 +78,7 @@
                     <a class="nav-link menu-link {{ active is defined and active == 'orden' ? 'active' }}" href="{{ path('app_order_index') }}" role="button"
                        aria-expanded="false"
                        aria-controls="sidebarLanding">
-                        <i class="ri-truck-line"></i> <span>Ordenes</span>
+                        <i class="ri-team-line"></i> <span>Empleados</span>
                     </a>
                 </li>
 
@@ -86,15 +86,15 @@
                     <a class="nav-link menu-link {{ active is defined and active == 'invoice' ? 'active' }}" href="{{ path('app_invoice_index') }}" role="button"
                        aria-expanded="false"
                        aria-controls="sidebarLanding">
-                        <i class="ri-survey-line"></i> <span>Facturas</span>
+                        <i class="ri-user-heart-line"></i> <span>Clientes</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link menu-link {{ active is defined and active == 'reminder' ? 'active' }}" href="{{ path('app_reminder_index') }}" role="button"
+                    <a class="nav-link menu-link {{ active is defined and active == 'reminder' ? 'active' }}" href="{{ path('app_logout') }}" role="button"
                        aria-expanded="false"
                        aria-controls="sidebarLanding">
-                        <i class="ri-calendar-check-line"></i> <span>Panel de tareas</span>
+                        <i class="ri-calendar-check-line"></i> <span>Cerrar sesión</span>
                     </a>
                 </li>
 
