--- a/templates/partials/topbar.html.twig
+++ b/templates/partials/topbar.html.twig
@@ -15,10 +15,10 @@
 
                     <a href="/" class="logo logo-light">
                         <span class="logo-sm">
-                            <img src="{{ asset('images/logo-sm-2.svg') }}" alt="" height="22">
+                            <img src="{{ asset('images/logo-final.png') }}" alt="" height="22">
                         </span>
                         <span class="logo-lg">
-                            <img src="{{ asset('images/logo-light-2.svg') }}" alt="" height="40">
+                            <img src="{{ asset('images/logo-final.png') }}" alt="" height="40">
                         </span>
                     </a>
                 </div>
