--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -49,7 +49,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link menu-link {{ active is defined and active == 'team' ? 'active' }}" href="{{ path('app_team_index') }}" role="button"
+                        <a class="nav-link menu-link {{ active is defined and active == 'send' ? 'active' }}" href="{{ path('app_secure_send') }}" role="button"
                            aria-expanded="false"
                            aria-controls="sidebarLanding">
                             <i class="ri-mail-send-line"></i> <span>Envíos</span>
