--- a/templates/secure/dispatch/index.html.twig
+++ b/templates/secure/dispatch/index.html.twig
@@ -117,7 +117,7 @@
                                             <option value="1000">1.000</option>
                                         </select> registros</label></div>
                                 <div class="dt-search"><label for="dt-search-0">Buscar:</label><input type="search"
-                                        class="form-control form-control-sm" id="dt-search-0" placeholder="Buscar..."
+                                        class="form-control form-control-sm" id="dt-search-0" placeholder=""
                                         aria-controls="datatablepage"></div>
                                 <div class="dt-scroll">
                                     <div class="dt-scroll-head"
@@ -188,7 +188,7 @@
                                                         <th style="width: 9%" data-dt-column="10" rowspan="1"
                                                             colspan="1" class="dt-orderable-none" aria-label=""><span class="dt-column-title"></span><span class="dt-column-order"></span></th>
                                                     </tr>
-                                                    <tr id="btn-datatable-filter" style="" role="row">
+                                                    <tr id="btn-datatable-filter"  role="row">
                                                         <th data-dt-column="0" class="select-checkbox dt-orderable-none"
                                                             rowspan="1" colspan="1" aria-label=""><span class="dt-column-title">
                                                                 <div class="form-check mb-2">
@@ -384,11 +384,7 @@
                                             <thead class="table-light text-muted">
                                                 <tr role="row">
                                                     <th data-dt-column="0" class="select-checkbox dt-orderable-none"
-                                                        rowspan="1" colspan="1" aria-label="
-                                    
-                                        
-                                    
-                                ">
+                                                        rowspan="1" colspan="1" aria-label="">
                                                         <div class="dt-scroll-sizing"><span
                                                                 class="dt-column-title"></span><span
                                                                 class="dt-column-order"></span></div>
@@ -458,25 +454,15 @@
                                                                 class="dt-column-order"></span></div>
                                                     </th>
                                                     <th style="width: 9%" data-dt-column="10" rowspan="1" colspan="1"
-                                                        class="dt-orderable-none" aria-label="
-                                    
-                                        
-                                            
-                                        
-                                    
-                                ">
+                                                        class="dt-orderable-none" aria-label="">
                                                         <div class="dt-scroll-sizing"><span
                                                                 class="dt-column-title"></span><span
                                                                 class="dt-column-order"></span></div>
                                                     </th>
                                                 </tr>
-                                                <tr style="" role="row">
+                                                <tr role="row">
                                                     <th data-dt-column="0" class="select-checkbox dt-orderable-none"
-                                                        rowspan="1" colspan="1" aria-label="
-                                    
-                                        
-                                    
-                                ">
+                                                        rowspan="1" colspan="1" aria-label="">
                                                         <div class="dt-scroll-sizing"><span class="dt-column-title">
                                                                 <div class="form-check mb-2">
                                                                     <input class="form-check-input" type="checkbox">
