Se agrega vista oficinas

--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -57,7 +57,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link menu-link {{ active is defined and  active == 'user' ? 'active' }}" href="{{ path('app_user_index') }}" role="button"
+                        <a class="nav-link menu-link {{ active is defined and  active == 'office' ? 'active' }}" href="{{ path('app_secure_office_postal') }}" role="button"
                            aria-expanded="false"
                            aria-controls="sidebarLanding">
                             <i class="ri-community-line"></i> <span>Oficinas</span>
