Se agrega vista transporte

--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -67,7 +67,7 @@
                 {% endif %}
 
                 <li class="nav-item">
-                    <a class="nav-link menu-link {{ active is defined and active == 'customer' ? 'active' }}" href="{{ path('app_customer_index') }}" role="button"
+                    <a class="nav-link menu-link {{ active is defined and active == 'carrier' ? 'active' }}" href="{{ path('app_secure_carrier') }}" role="button"
                        aria-expanded="false"
                        aria-controls="sidebarLanding">
                         <i class="ri-truck-line"></i> <span>Transportes</span>
