--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -75,7 +75,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link menu-link {{ active is defined and active == 'orden' ? 'active' }}" href="{{ path('app_order_index') }}" role="button"
+                    <a class="nav-link menu-link {{ active is defined and active == 'employee' ? 'active' }}" href="{{ path('app_secure_employee') }}" role="button"
                        aria-expanded="false"
                        aria-controls="sidebarLanding">
                         <i class="ri-team-line"></i> <span>Empleados</span>
