--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -83,7 +83,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link menu-link {{ active is defined and active == 'invoice' ? 'active' }}" href="{{ path('app_invoice_index') }}" role="button"
+                    <a class="nav-link menu-link {{ active is defined and active == 'customer' ? 'active' }}" href="{{ path('app_secure_customer') }}" role="button"
                        aria-expanded="false"
                        aria-controls="sidebarLanding">
                         <i class="ri-user-heart-line"></i> <span>Clientes</span>
