--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,40 +2,51 @@
 <html lang="es" data-layout="horizontal" data-topbar="light" data-sidebar="dark" data-sidebar-size="sm-hover"
       data-sidebar-image="none" data-preloader="enable" data-layout-mode="light" data-layout-width="fluid"
       data-layout-position="fixed" data-layout-style="default">
+
 <head>
-    <meta charset="UTF-8">
+      <meta charset="UTF-8">
 
-    <link rel="icon"
-          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+      <link rel="icon"
+            href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
-    <title>{% block title %}Administración | {{ title|default('MiaCargoPost') }}{% endblock %}</title>
+      <title>{% block title %}Administración | {{ title|default('MiaCargoPost') }}{% endblock %}</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- App favicon -->
-    <link rel="shortcut icon" href="{{ asset('images/favicon.ico') }}">
+      <!-- App favicon -->
+      <link rel="shortcut icon" href="{{ asset('images/favicon.ico') }}">
 
-    <!-- Layout config Js -->
-    <script src="{{ asset('js/layout.js') }}"></script>
-    <!-- Bootstrap Css -->
-    <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" type="text/css"/>
-    <!-- Icons Css -->
-    <link href="{{ asset('css/icons.min.css') }}" rel="stylesheet" type="text/css"/>
-    <!-- jConfirm Css -->
-    <link href="{{ asset('libs/jconfirm/jquery-confirm.min.css') }}" rel="stylesheet" type="text/css"/>
+      <link type="text/css" rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
 
-    {% block stylesheets %}{% endblock %}
+      <!-- Layout config Js -->
+      <script src="{{ asset('js/layout.js') }}"></script>
+      <!-- Bootstrap Css -->
+      <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
+      <!-- Icons Css -->
+      <link href="{{ asset('css/icons.min.css') }}" rel="stylesheet" type="text/css" />
+      <!-- jConfirm Css -->
+      <link href="{{ asset('libs/jconfirm/jquery-confirm.min.css') }}" rel="stylesheet" type="text/css" />
 
-    <!-- App Css-->
-    <link href="{{ asset('css/app.min.css') }}" rel="stylesheet" type="text/css"/>
+      {% block stylesheets %}{% endblock %}
 
-    <!-- custom Css-->
-    <link href="{{ asset('css/custom.min.css') }}" rel="stylesheet" type="text/css"/>
+      <!-- App Css-->
+      <link href="{{ asset('css/app.min.css') }}" rel="stylesheet" type="text/css" />
+
+      <!-- custom Css-->
+      <link href="{{ asset('css/custom.min.css') }}" rel="stylesheet" type="text/css" />
 
 </head>
-<body>
-{% block body %}{% endblock %}
 
-{% block javascripts %}{% endblock %}
+<body>
+      {% block body %}{% endblock %}
+
+      {% block javascripts %}
+      {% endblock %}
+      <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"
+            type="text/javascript"></script>
+      <script src="{{ asset('js/pages/select2.init.js') }}" type="text/javascript"></script>
+
 </body>
+
 </html>
