--- a/templates/pdf/cn22.html.twig
+++ b/templates/pdf/cn22.html.twig
@@ -1,20 +1,26 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Hello PdfController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello ! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/dvida/Herd/miacargopost/src/Controller/PdfController.php'|file_link(0) }}">src/Controller/PdfController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/dvida/Herd/miacargopost/templates/pdf/index.html.twig'|file_link(0) }}">templates/pdf/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <table>
+        <thead>
+            <tr>
+                <th>
+                    Prueba
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    prueba2
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</body>
+</html>
