--- a/templates/secure/upu/index.html.twig
+++ b/templates/secure/upu/index.html.twig
@@ -19,6 +19,8 @@
     <div class="row">
         <div class="col-xs-12 text-center">
             <h1 class="alert alert-success">
+                <img src="{{ asset(s10CodeGenerated.barcodeImage) }}" alt="Código de Barras S10">
+                <br>
                 {{ s10CodeGenerated.getFormattedNumbercode }}
             </h1>
         </div>
