--- a/templates/pdf/cn23.html.twig
+++ b/templates/pdf/cn23.html.twig
@@ -9,24 +9,153 @@
 				font-family: Arial, sans-serif;
 				margin: 0;
 				padding: 0;
+
 			}
 			.container {
-				width: 1052px;
-				height: 750px;
+				width: 1078px;
+				height: 745px;
 				border: 1px solid #000;
-				background-color: aqua;
-				margin: 0px auto;
+				margin: 0 auto;
+
+
+				/* background-color: aqua; */
+
+
 			}
-            .inlBlock{
-                display: inline-block;
-                
-            }
+			.inlBlock {
+				display: inline-block;
+			}
+			.reset {
+				margin: 0;
+				padding: 0;
+			}
+
+			.bold-800 {
+				font-weight: bold;
+			}
+			.uppercase {
+				text-transform: uppercase;
+			}
+			.size-12px {
+				font-size: 12px;
+			}
+			.size-20px {
+				font-size: 20px;
+			}
+			.text-right {
+				text-align: right;
+			}
+			.p-operador {
+				margin-left: 90px;
+				margin-top: 10px;
+				font-size: 10px;
+			}
+			.h1-title {
+				margin-left: 250px;
+			}
 		</style>
 	</head>
-	<body>
-		<div class="container">
-			<h1>Formulario Aduana CN23</h1>
-			<p>Datos del Transportista:</p>
+	<body
+		style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
+		{# Container #}
+		<div style="width:auto; ">
+
+
+			{# <div style="display: inline-block;">
+										{% if base64Image %}
+											<img src="data:image/png;base64,{{ base64Image }}" alt="Logo EMS" style="width: 380px; height: 30px;">
+										{% else %}
+											<p>La imagen no se pudo cargar.</p>
+										{% endif %}
+										<h1 style="padding: 0; margin:5px 0 5px 0 ; font-size:22px">CUSTOMS DECLARATION</h1>
+										<P style="padding: 0; margin:0;">Name of the designated operator</P>
+										<P style="padding: 0; margin:0; font-size:18px; font-weight:600 ">MiaCargoPost</P>
+						
+									</div>
+									<div style="display: inline-block; background-color:red; width: auto; height: 80px; ">
+						                <p style="padding: 0; margin:0;">Date</p>
+						                <p style="padding: 0; margin:0; font-size:18px; font-weight:600 ">2021-12-12</p>
+						            </div> #}
+
+			{# Header Form #}
+			<table style=" width: 100%; border-collapse: collapse;">
+
+				<tbody>
+					<tr>
+						<td style="background-color: aqua; width:53%">
+							{% if base64Image %}
+								<img src="data:image/png;base64,{{ base64Image }}" alt="Logo EMS" style="width: 380px; height: 40px; background-color:blue">
+							{% else %}
+								<p>La imagen no se pudo cargar.</p>
+							{% endif %}
+							 <h1 style="padding: 0; margin:5px 0 5px 0 ; font-size:22px">CUSTOMS DECLARATION</h1>
+							 <p style="padding: 0; margin:0; ">Name of the designated operator</p>							
+						</td>
+						<td style="background-color:red; vertical-align:top;">
+							<img src="data:image/png;base64,{{ base64ImageCode }}" alt="Logo EMS" style="width: 250px; height: 50px; ">
+							<p style="font-size: 18px; padding: 0 0 0 18px; margin:0; font-weight:600">E E 0 0 2 8 7 4 443DO</p>
+							 <p style="font-size: 12px; padding: 0 0 0 22px; margin:0">May be opened officially</p>							
+						</td>
+						<td>
+							<p style="font-size: 18px; font-weight:600; padding: 0; margin:0; text-align:right"> CN 23 EMS</p>							
+						</td>
+					</tr>
+					<tr>
+						<td style="vertical-align:top;">							
+							<P style="padding: 0; margin:0; font-size:18px; font-weight:600; text-transform:uppercase; ">MiaCargoPost</P>
+						</td>
+						<td style="background-color:bisque; border:1px #000 solid; vertical-align:top;" colspan="2" >
+						<p style="font-size:14px; padding: 0; margin:5px 0 10px 18px;">Importer's reference (if any) (tax code/VAT NO./importer code) (optional)</p>	</td>
+						
+					</tr>
+					<tr>
+						<td ></td>
+						<td style="background-color:rgb(224, 127, 7); border-top:1px #000 solid; border-left:1px #000 solid; border-right:1px #000 solid; vertical-align:top; " colspan="2">
+							<p style="font-size:14px; padding: 0; margin:5px 0 0 18px;">Importer's telephone/fax/e-mail (if known)</p>
+							<p style="font-size:16px; font-weight:600; padding: 0; margin:0 0 0px 18px;">1234567890</p>
+						</td>
+					</tr>
+				</tbody>
+
+			</table>
+			{# From to #}
+			<table style="width: 100%; border-collapse: collapse; border-top:1px #000 solid; border-bottom:1px #000 solid; border-right:1px #000 solid;">
+				<tr >
+					<td style="background-color: aquamarine; width:40px; font-size:18px; vertical-align:top; padding:5px 5px 0 0; " rowspan="5">From</td>
+					<td style="width:37.1%; border:1px #000 solid; vertical-align:bottom; padding:5px" colspan="2">Name <span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;" >Pepito</span></td>					
+					<td style="width:135px; border: 1px #000 solid; vertical-align:top;" rowspan="2">Sender's customs reference (if any)</td>
+					<td style="width:45px; font-size:18px; border-right: 1px #000 solid; vertical-align:top; padding:5px 0 0 5px;" rowspan="5">To</td>
+					<td style="border-bottom: 1px #000 solid; border-right: 1px #000 solid; vertical-align:bottom; " colspan="2">Name <span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;" >Pepito</span></td>
+					
+				</tr>
+				<tr >
+					
+					<td style="border-bottom: 1px #000 solid; vertical-align:bottom; padding:5px" colspan="2">Street</td>
+					
+					<td style="border-bottom: 1px #000 solid; border-right:1px #000 solid;vertical-align:bottom; padding:5px " colspan="2">Street</td>
+				</tr>
+				<tr>
+					<td style="width:20%; vertical-align:bottom;  padding:5px;  border-bottom:1px #000 solid;" >Postcode<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;"  colspan="2" >Cyty<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					<td style="width:20%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Postcode<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					<td style="border-bottom:1px #000 solid; border-right:1px #000 solid; padding:5px; vertical-align:bottom;">City<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					
+				</tr>
+				<tr>
+					<td style="width:20%; vertical-align:bottom;  padding:5px; border-bottom:1px #000 solid; " colspan="3" >Country<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+                    
+                    <td style="width:20%; padding:5px; vertical-align:bottom; border-bottom:1px #000 solid;" colspan="3">Country<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0"></span></td>
+				</tr>
+				<tr>
+					<td style="width:20%; vertical-align:bottom;  padding:5px;  border-bottom:1px #000 solid;" >Tel.<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					<td style="border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;"  colspan="2" >E-mail<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					<td style="width:20%; border-bottom:1px #000 solid; padding:5px; vertical-align:bottom;">Tel.<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					<td style="border-bottom:1px #000 solid; border-right:1px #000 solid; padding:5px; vertical-align:bottom;">E-mail<span style="font-size:16px; font-weight:600; text-transform:uppercase;  padding: 0; margin:0 0 0px 5px;"></span></td>
+					
+				</tr>
+
+			</table>
+
 		</div>
 
 	</body>
