--- a/templates/secure/upu/index.html.twig
+++ b/templates/secure/upu/index.html.twig
@@ -25,6 +25,8 @@
             </h1>
             <a target="_blank" class="btn btn-primary" href="{{ path('app_pdf_cn22', { 's10code_id':s10CodeGenerated.id}) }}">Ver
                 CN22</a>
+                <a target="_blank" class="btn btn-primary" href="{{ path('app_pdf_cn23', { 's10code_id':s10CodeGenerated.id}) }}">Ver
+                    CN23</a>
         </div>
     </div>
     {% endif %}
@@ -100,6 +102,7 @@
                         </td>
                         <td class="text-center">
                             <a target="_blank" href="{{ path('app_pdf_cn22', { 's10code_id':s10.id}) }}" class="btn btn-primary">Ver CN22</a>
+                            <a target="_blank" href="{{ path('app_pdf_cn23', { 's10code_id':s10.id}) }}" class="btn btn-primary">Ver CN23</a>
                         </td>
                     </tr>
 
