--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12442,7 +12442,7 @@ span.flatpickr-weekday {
  
 }
 .auth-bg-cover > .bg-overlay {
-  background-image: linear-gradient(-45deg,rgb(139 175 189 / 40%),rgb(202 23 189 / 60%)), url(../images/cover-pattern.png);
+  background-image: linear-gradient(-45deg,rgb(139 175 189 / 40%),rgb(202 23 189 / 60%)), url(../images/fondoinicio.jpg);
   background-position: center;
   background-size: cover;
   opacity: 0.8;
