--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,7 +40,7 @@
       {% block stylesheets %}{% endblock %}
 
       <!-- App Css-->
-      <link href="{{ asset('css/app.min.css') }}" rel="stylesheet" type="text/css" />
+      <link href="{{ asset('css/app.css') }}" rel="stylesheet" type="text/css" />
 
       <!-- custom Css-->
       <link href="{{ asset('css/custom.min.css') }}" rel="stylesheet" type="text/css" />
