Se saca logo de EMS y se modifica el titutlo del formulario

--- a/templates/pdf/cn23.html.twig
+++ b/templates/pdf/cn23.html.twig
@@ -21,12 +21,12 @@
 			<tbody>
 				<tr>
 					<td style="width:53%">
-						{% if base64Image %}
+						{# {% if base64Image %}
 						<img src="data:image/png;base64,{{ base64Image }}" alt="Logo EMS"
 							style="width: 380px; height: 20px;">
 						{% else %}
 						<p>La imagen no se pudo cargar.</p>
-						{% endif %}
+						{% endif %} #}
 						<h1 style="padding: 0; margin:5px 0 5px 0 ; font-size:22px">CUSTOMS DECLARATION</h1>
 						<p style="padding: 0; margin:0; ">Name of the designated operator</p>
 					</td>
@@ -38,7 +38,7 @@
 						<p style="font-size: 12px; padding: 0 0 0 22px; margin:0">May be opened officially</p>
 					</td>
 					<td>
-						<p style="font-size: 24px; font-weight:600; padding: 0; margin:0; text-align:right"> CN 23 EMS
+						<p style="font-size: 24px; font-weight:600; padding: 0; margin:0; text-align:right"> CN 23
 						</p>
 					</td>
 				</tr>
