Se agrega boton de ver a la vista del generados s10

--- a/templates/secure/upu/index.html.twig
+++ b/templates/secure/upu/index.html.twig
@@ -27,6 +27,8 @@
                 CN22</a>
                 <a target="_blank" class="btn btn-primary" href="{{ path('app_pdf_cn23', { 's10code_id':s10CodeGenerated.id}) }}">Ver
                     CN23</a>
+                <a target="_blank" class="btn btn-primary" href="{{ path('app_pdf_cn31', { 's10code_id':s10CodeGenerated.id}) }}">Ver
+                    CN31</a>
         </div>
     </div>
     {% endif %}
@@ -103,6 +105,7 @@
                         <td class="text-center">
                             <a target="_blank" href="{{ path('app_pdf_cn22', { 's10code_id':s10.id}) }}" class="btn btn-primary">Ver CN22</a>
                             <a target="_blank" href="{{ path('app_pdf_cn23', { 's10code_id':s10.id}) }}" class="btn btn-primary">Ver CN23</a>
+                            <a target="_blank" href="{{ path('app_pdf_cn31', { 's10code_id':s10.id}) }}" class="btn btn-primary">Ver CN31</a>
                         </td>
                     </tr>
 
